# AGTB

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.CN.md  README.md  conanfile.py
include/AGTB/: AGTB.hpp  Adjustment.hpp  Geodesy.hpp  IO.hpp  Photogrammetry.hpp  SpaceResection.hpp
include/AGTB/Adjustment/: Base.hpp  Elevation.hpp  ElevationNet.hpp  ErrorMeasure.hpp  RefineCorrection.hpp  Tolerance.hpp  Traverse.hpp  TraverseNet.hpp
include/AGTB/Container/: BidirectionalMap.hpp  DataFrame.hpp  NamedGraph.hpp  PropertyTree.hpp
include/AGTB/Geodesy/: Base.hpp  Datum.hpp  MeridianArc.hpp  PrincipleCurvature.hpp  PrincipleCurvatureRadii.hpp  Project.hpp  Solve.hpp  SpatialReference.hpp
include/AGTB/Geodesy-old/: Project.hpp
include/AGTB/Geodesy_old/: MeridianArc.hpp
include/AGTB/IO/: Adjustment.hpp  CSV.hpp  Eigen.hpp  JSON.hpp
include/AGTB/Linalg/: Base.hpp  CoordinateSystemTranform.hpp  CorrectionOlsSolve.hpp  NormalEquationMatrixInverse.hpp  RotationMatrix.hpp
include/AGTB/Photogrammetry/: Base.hpp  ContinuousRelativeOrientate.hpp  SpaceIntersection.cpp  SpaceIntersection.hpp  SpaceResection.hpp
include/AGTB/Photographic/: Base.hpp  NormalizationSolver.hpp  SpaceResection.hpp
include/AGTB/Utils/: Angles.hpp  Assert.hpp  CharConv.hpp  Concept.hpp  (+8 more)
python/pre_correction/: meridian_arc.py
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: Adj_Traverse.cpp  Adj_Traverse_ClosedLoop.cpp  Bessel_Coeff.cpp  Draft.cpp  Geodesy_Base.cpp  Geodesy_PC.cpp  MeridianArc_Part.cpp  SpaceResection.cpp  Utils_Angles.cpp  Utils_String.cpp
(+73 files in other folders)
